--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,12 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+
+---
+---
+/* Override para avatar cuadrado */
+.author__avatar img,
+img.avatar {
+  border-radius: 0 !important;
+}
