--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,6 +43,9 @@
 ;
 
 
+/* Tu override va al final para ganar prioridad */
+@import "custom/custom";
+
 
 /* =========================================================
    Overrides: Avatar/Fotos cuadradas en el sidebar y perfil
