--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -10,7 +10,7 @@
 /* Ajustar márgenes para que se vea bien */
 .sidebar {
   margin-left: 4rem; /* espacio entre contenido y sidebar */
-  margin-right: 0;
+  margin-right: 4rem;
 }
 
 /* En pantallas pequeñas, mantener diseño vertical */
